@@ -197,6 +197,8 @@ public class EmulatorExe {
 			cmd.add("java.base/java.util=ALL-UNNAMED");
 			cmd.add("--add-opens");
 			cmd.add("java.base/sun.misc=ALL-UNNAMED");
+			cmd.add("--add-opens");
+			cmd.add("java.base/com.sun.media.sound=ALL-UNNAMED");
 			if (getJavaVersionMajor() >= 17)
 				cmd.add("--enable-native-access=ALL-UNNAMED");
 		}
